Lexer/grammar.output
Terminals unused in grammar

    TOKEN_EOF
    TOKEN_UNKNOWN
    TOKEN_INCREMENT


State 38 conflicts: 3 shift/reduce
State 39 conflicts: 6 shift/reduce
State 40 conflicts: 2 shift/reduce
State 41 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Body

    2 Body: %empty
    3     | Declaration ProgramBody
    4     | Statement ProgramBody

    5 ProgramBody: %empty
    6            | Declaration ProgramBody
    7            | Statement ProgramBody

    8 Declaration: TOKEN_VAR TOKEN_IDENTIFIER TOKEN_SEMI
    9            | TOKEN_VAR TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TOKEN_SEMI

   10 Expression: Relation
   11           | Relation TOKEN_AND Relation
   12           | Relation TOKEN_OR Relation
   13           | Relation TOKEN_XOR Relation

   14 Relation: Factor
   15         | Factor TOKEN_LESS Factor
   16         | Factor TOKEN_LEQ Factor
   17         | Factor TOKEN_GREAT Factor
   18         | Factor TOKEN_GEQ Factor
   19         | Factor TOKEN_EQUAL Factor
   20         | Factor TOKEN_NEQ Factor

   21 Factor: Term
   22       | Term TOKEN_PLUS Factor
   23       | Term TOKEN_MINUS Factor

   24 Term: Unary
   25     | Unary TOKEN_MULT Term
   26     | Unary TOKEN_DIV Term

   27 Unary: Primary
   28      | TOKEN_PLUS Primary
   29      | TOKEN_MINUS Primary
   30      | TOKEN_NOT Primary
   31      | Literal
   32      | TOKEN_LPAREN Expression TOKEN_RPAREN
   33      | TOKEN_PLUS Primary TOKEN_IS TypeIndicator
   34      | TOKEN_MINUS Primary TOKEN_IS TypeIndicator
   35      | TOKEN_NOT Primary TOKEN_IS TypeIndicator
   36      | Primary TOKEN_IS TypeIndicator

   37 Primary: TOKEN_IDENTIFIER Tail
   38        | TOKEN_READINT
   39        | TOKEN_READREAL
   40        | TOKEN_READSTRING

   41 Tail: %empty
   42     | TOKEN_DOT TOKEN_INT_LITERAL
   43     | TOKEN_DOT TOKEN_IDENTIFIER
   44     | TOKEN_LSQUARE Expression TOKEN_RSQUARE
   45     | TOKEN_LPAREN Expressions TOKEN_RPAREN

   46 Statement: Assignment
   47          | Print
   48          | Return
   49          | If
   50          | Loop

   51 Assignment: Primary TOKEN_ASSIGNMENT Expression TOKEN_SEMI

   52 Print: TOKEN_PRINT Expressions TOKEN_SEMI

   53 Expressions: Expression
   54            | Expression TOKEN_COMMA Expressions

   55 Return: TOKEN_RETURN Expression TOKEN_SEMI
   56       | TOKEN_RETURN TOKEN_SEMI

   57 If: TOKEN_IF Expression TOKEN_THEN Body TOKEN_END
   58   | TOKEN_IF Expression TOKEN_THEN Body TOKEN_ELSE Body TOKEN_END

   59 Loop: TOKEN_WHILE Expression LoopBody
   60     | TOKEN_FOR TOKEN_IDENTIFIER TOKEN_IN TypeIndicator LoopBody

   61 LoopBody: TOKEN_LOOP Body TOKEN_END

   62 TypeIndicator: TOKEN_INT
   63              | TOKEN_REAL
   64              | TOKEN_BOOL
   65              | TOKEN_STRING
   66              | TOKEN_EMPTY
   67              | TOKEN_ARRAY
   68              | TOKEN_TUPLE
   69              | TOKEN_FUNC

   70 Literal: TOKEN_INT_LITERAL
   71        | TOKEN_REAL_LITERAL
   72        | TOKEN_TRUE
   73        | TOKEN_FALSE
   74        | TOKEN_STRING_LITERAL
   75        | ArrayLiteral
   76        | TupleLiteral
   77        | FunctionLiteral

   78 ArrayLiteral: TOKEN_LSQUARE TOKEN_RSQUARE
   79             | TOKEN_LSQUARE Expressions TOKEN_RSQUARE

   80 TupleLiteral: TOKEN_LCURLY TOKEN_RCURLY
   81             | TOKEN_LCURLY TOKEN_IDENTIFIER TupleTail
   82             | TOKEN_LCURLY TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TupleTail

   83 TupleTail: TOKEN_RCURLY
   84          | TOKEN_COMMA TOKEN_IDENTIFIER TupleTail
   85          | TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TupleTail

   86 FunctionLiteral: TOKEN_FUNC TOKEN_IS Body TOKEN_END
   87                | TOKEN_FUNC TOKEN_FUNCTOR Expression
   88                | TOKEN_FUNC Parameters TOKEN_IS Body TOKEN_END
   89                | TOKEN_FUNC Parameters TOKEN_FUNCTOR Expression

   90 Parameters: TOKEN_LPAREN Identifiers TOKEN_RPAREN

   91 Identifiers: TOKEN_IDENTIFIER
   92            | TOKEN_IDENTIFIER TOKEN_COMMA Identifiers


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ASSIGNMENT <token> (258) 9 51 82 85
    TOKEN_FUNCTOR <token> (259) 87 89
    TOKEN_EOF <token> (260)
    TOKEN_UNKNOWN <token> (261)
    TOKEN_IDENTIFIER <string> (262) 8 9 37 43 60 81 82 84 85 91 92
    TOKEN_INT_LITERAL <string> (263) 42 70
    TOKEN_REAL_LITERAL <string> (264) 71
    TOKEN_STRING_LITERAL <string> (265) 74
    TOKEN_TRUE <string> (266) 72
    TOKEN_FALSE <string> (267) 73
    TOKEN_FUNC <token> (268) 69 86 87 88 89
    TOKEN_END <token> (269) 57 58 61 86 88
    TOKEN_IF <token> (270) 57 58
    TOKEN_THEN <token> (271) 57 58
    TOKEN_ELSE <token> (272) 58
    TOKEN_PRINT <token> (273) 52
    TOKEN_RETURN <token> (274) 55 56
    TOKEN_LOOP <token> (275) 61
    TOKEN_VAR <token> (276) 8 9
    TOKEN_WHILE <token> (277) 59
    TOKEN_FOR <token> (278) 60
    TOKEN_IN <token> (279) 60
    TOKEN_AND <token> (280) 11
    TOKEN_OR <token> (281) 12
    TOKEN_XOR <token> (282) 13
    TOKEN_NOT <token> (283) 30 35
    TOKEN_IS <token> (284) 33 34 35 36 86 88
    TOKEN_EMPTY <string> (285) 66
    TOKEN_INT <string> (286) 62
    TOKEN_REAL <string> (287) 63
    TOKEN_BOOL <string> (288) 64
    TOKEN_STRING <string> (289) 65
    TOKEN_ARRAY <string> (290) 67
    TOKEN_TUPLE <string> (291) 68
    TOKEN_LPAREN <token> (292) 32 45 90
    TOKEN_RPAREN <token> (293) 32 45 90
    TOKEN_LSQUARE <token> (294) 44 78 79
    TOKEN_RSQUARE <token> (295) 44 78 79
    TOKEN_LCURLY <token> (296) 80 81 82
    TOKEN_RCURLY <token> (297) 80 83
    TOKEN_SEMI <token> (298) 8 9 51 52 55 56
    TOKEN_COMMA <token> (299) 54 84 85 92
    TOKEN_DOT <token> (300) 42 43
    TOKEN_PLUS <token> (301) 22 28 33
    TOKEN_MINUS <token> (302) 23 29 34
    TOKEN_MULT <token> (303) 25
    TOKEN_DIV <token> (304) 26
    TOKEN_EQUAL <token> (305) 19
    TOKEN_NEQ <token> (306) 20
    TOKEN_LESS <token> (307) 15
    TOKEN_LEQ <token> (308) 16
    TOKEN_GREAT <token> (309) 17
    TOKEN_GEQ <token> (310) 18
    TOKEN_INCREMENT <token> (311)
    TOKEN_READINT <string> (312) 38
    TOKEN_READREAL <string> (313) 39
    TOKEN_READSTRING <string> (314) 40


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    Program (61)
        on left: 1
        on right: 0
    Body <NBlock> (62)
        on left: 2 3 4
        on right: 1 57 58 61 86 88
    ProgramBody <NBlock> (63)
        on left: 5 6 7
        on right: 3 4 6 7
    Declaration <declaration> (64)
        on left: 8 9
        on right: 3 6
    Expression <expression> (65)
        on left: 10 11 12 13
        on right: 9 32 44 51 53 54 55 57 58 59 82 85 87 89
    Relation <expression> (66)
        on left: 14 15 16 17 18 19 20
        on right: 10 11 12 13
    Factor <expression> (67)
        on left: 21 22 23
        on right: 14 15 16 17 18 19 20 22 23
    Term <expression> (68)
        on left: 24 25 26
        on right: 21 22 23 25 26
    Unary <expression> (69)
        on left: 27 28 29 30 31 32 33 34 35 36
        on right: 24 25 26
    Primary <expression> (70)
        on left: 37 38 39 40
        on right: 27 28 29 30 33 34 35 36 51
    Tail (71)
        on left: 41 42 43 44 45
        on right: 37
    Statement <statement> (72)
        on left: 46 47 48 49 50
        on right: 4 7
    Assignment <statement> (73)
        on left: 51
        on right: 46
    Print <statement> (74)
        on left: 52
        on right: 47
    Expressions <expressionVector> (75)
        on left: 53 54
        on right: 45 52 54 79
    Return <statement> (76)
        on left: 55 56
        on right: 48
    If <statement> (77)
        on left: 57 58
        on right: 49
    Loop <statement> (78)
        on left: 59 60
        on right: 50
    LoopBody <NBlock> (79)
        on left: 61
        on right: 59 60
    TypeIndicator <string> (80)
        on left: 62 63 64 65 66 67 68 69
        on right: 33 34 35 36 60
    Literal <expression> (81)
        on left: 70 71 72 73 74 75 76 77
        on right: 31
    ArrayLiteral <expression> (82)
        on left: 78 79
        on right: 75
    TupleLiteral <expression> (83)
        on left: 80 81 82
        on right: 76
    TupleTail (84)
        on left: 83 84 85
        on right: 81 82 84 85
    FunctionLiteral <expression> (85)
        on left: 86 87 88 89
        on right: 77
    Parameters <paramVector> (86)
        on left: 90
        on right: 88 89
    Identifiers <paramVector> (87)
        on left: 91 92
        on right: 90 92


State 0

    0 $accept: • Program $end

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_IF          shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_RETURN      shift, and go to state 4
    TOKEN_VAR         shift, and go to state 5
    TOKEN_WHILE       shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_READINT     shift, and go to state 8
    TOKEN_READREAL    shift, and go to state 9
    TOKEN_READSTRING  shift, and go to state 10

    $default  reduce using rule 2 (Body)

    Program      go to state 11
    Body         go to state 12
    Declaration  go to state 13
    Primary      go to state 14
    Statement    go to state 15
    Assignment   go to state 16
    Print        go to state 17
    Return       go to state 18
    If           go to state 19
    Loop         go to state 20


State 1

   37 Primary: TOKEN_IDENTIFIER • Tail

    TOKEN_LPAREN   shift, and go to state 21
    TOKEN_LSQUARE  shift, and go to state 22
    TOKEN_DOT      shift, and go to state 23

    $default  reduce using rule 41 (Tail)

    Tail  go to state 24


State 2

   57 If: TOKEN_IF • Expression TOKEN_THEN Body TOKEN_END
   58   | TOKEN_IF • Expression TOKEN_THEN Body TOKEN_ELSE Body TOKEN_END

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 25
    TOKEN_REAL_LITERAL    shift, and go to state 26
    TOKEN_STRING_LITERAL  shift, and go to state 27
    TOKEN_TRUE            shift, and go to state 28
    TOKEN_FALSE           shift, and go to state 29
    TOKEN_FUNC            shift, and go to state 30
    TOKEN_NOT             shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_LSQUARE         shift, and go to state 33
    TOKEN_LCURLY          shift, and go to state 34
    TOKEN_PLUS            shift, and go to state 35
    TOKEN_MINUS           shift, and go to state 36
    TOKEN_READINT         shift, and go to state 8
    TOKEN_READREAL        shift, and go to state 9
    TOKEN_READSTRING      shift, and go to state 10

    Expression       go to state 37
    Relation         go to state 38
    Factor           go to state 39
    Term             go to state 40
    Unary            go to state 41
    Primary          go to state 42
    Literal          go to state 43
    ArrayLiteral     go to state 44
    TupleLiteral     go to state 45
    FunctionLiteral  go to state 46


State 3

   52 Print: TOKEN_PRINT • Expressions TOKEN_SEMI

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 25
    TOKEN_REAL_LITERAL    shift, and go to state 26
    TOKEN_STRING_LITERAL  shift, and go to state 27
    TOKEN_TRUE            shift, and go to state 28
    TOKEN_FALSE           shift, and go to state 29
    TOKEN_FUNC            shift, and go to state 30
    TOKEN_NOT             shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_LSQUARE         shift, and go to state 33
    TOKEN_LCURLY          shift, and go to state 34
    TOKEN_PLUS            shift, and go to state 35
    TOKEN_MINUS           shift, and go to state 36
    TOKEN_READINT         shift, and go to state 8
    TOKEN_READREAL        shift, and go to state 9
    TOKEN_READSTRING      shift, and go to state 10

    Expression       go to state 47
    Relation         go to state 38
    Factor           go to state 39
    Term             go to state 40
    Unary            go to state 41
    Primary          go to state 42
    Expressions      go to state 48
    Literal          go to state 43
    ArrayLiteral     go to state 44
    TupleLiteral     go to state 45
    FunctionLiteral  go to state 46


State 4

   55 Return: TOKEN_RETURN • Expression TOKEN_SEMI
   56       | TOKEN_RETURN • TOKEN_SEMI

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 25
    TOKEN_REAL_LITERAL    shift, and go to state 26
    TOKEN_STRING_LITERAL  shift, and go to state 27
    TOKEN_TRUE            shift, and go to state 28
    TOKEN_FALSE           shift, and go to state 29
    TOKEN_FUNC            shift, and go to state 30
    TOKEN_NOT             shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_LSQUARE         shift, and go to state 33
    TOKEN_LCURLY          shift, and go to state 34
    TOKEN_SEMI            shift, and go to state 49
    TOKEN_PLUS            shift, and go to state 35
    TOKEN_MINUS           shift, and go to state 36
    TOKEN_READINT         shift, and go to state 8
    TOKEN_READREAL        shift, and go to state 9
    TOKEN_READSTRING      shift, and go to state 10

    Expression       go to state 50
    Relation         go to state 38
    Factor           go to state 39
    Term             go to state 40
    Unary            go to state 41
    Primary          go to state 42
    Literal          go to state 43
    ArrayLiteral     go to state 44
    TupleLiteral     go to state 45
    FunctionLiteral  go to state 46


State 5

    8 Declaration: TOKEN_VAR • TOKEN_IDENTIFIER TOKEN_SEMI
    9            | TOKEN_VAR • TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 51


State 6

   59 Loop: TOKEN_WHILE • Expression LoopBody

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 25
    TOKEN_REAL_LITERAL    shift, and go to state 26
    TOKEN_STRING_LITERAL  shift, and go to state 27
    TOKEN_TRUE            shift, and go to state 28
    TOKEN_FALSE           shift, and go to state 29
    TOKEN_FUNC            shift, and go to state 30
    TOKEN_NOT             shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_LSQUARE         shift, and go to state 33
    TOKEN_LCURLY          shift, and go to state 34
    TOKEN_PLUS            shift, and go to state 35
    TOKEN_MINUS           shift, and go to state 36
    TOKEN_READINT         shift, and go to state 8
    TOKEN_READREAL        shift, and go to state 9
    TOKEN_READSTRING      shift, and go to state 10

    Expression       go to state 52
    Relation         go to state 38
    Factor           go to state 39
    Term             go to state 40
    Unary            go to state 41
    Primary          go to state 42
    Literal          go to state 43
    ArrayLiteral     go to state 44
    TupleLiteral     go to state 45
    FunctionLiteral  go to state 46


State 7

   60 Loop: TOKEN_FOR • TOKEN_IDENTIFIER TOKEN_IN TypeIndicator LoopBody

    TOKEN_IDENTIFIER  shift, and go to state 53


State 8

   38 Primary: TOKEN_READINT •

    $default  reduce using rule 38 (Primary)


State 9

   39 Primary: TOKEN_READREAL •

    $default  reduce using rule 39 (Primary)


State 10

   40 Primary: TOKEN_READSTRING •

    $default  reduce using rule 40 (Primary)


State 11

    0 $accept: Program • $end

    $end  shift, and go to state 54


State 12

    1 Program: Body •

    $default  reduce using rule 1 (Program)


State 13

    3 Body: Declaration • ProgramBody

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_IF          shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_RETURN      shift, and go to state 4
    TOKEN_VAR         shift, and go to state 5
    TOKEN_WHILE       shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_READINT     shift, and go to state 8
    TOKEN_READREAL    shift, and go to state 9
    TOKEN_READSTRING  shift, and go to state 10

    $default  reduce using rule 5 (ProgramBody)

    ProgramBody  go to state 55
    Declaration  go to state 56
    Primary      go to state 14
    Statement    go to state 57
    Assignment   go to state 16
    Print        go to state 17
    Return       go to state 18
    If           go to state 19
    Loop         go to state 20


State 14

   51 Assignment: Primary • TOKEN_ASSIGNMENT Expression TOKEN_SEMI

    TOKEN_ASSIGNMENT  shift, and go to state 58


State 15

    4 Body: Statement • ProgramBody

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_IF          shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_RETURN      shift, and go to state 4
    TOKEN_VAR         shift, and go to state 5
    TOKEN_WHILE       shift, and go to state 6
    TOKEN_FOR         shift, and go to state 7
    TOKEN_READINT     shift, and go to state 8
    TOKEN_READREAL    shift, and go to state 9
    TOKEN_READSTRING  shift, and go to state 10

    $default  reduce using rule 5 (ProgramBody)

    ProgramBody  go to state 59
    Declaration  go to state 56
    Primary      go to state 14
    Statement    go to state 57
    Assignment   go to state 16
    Print        go to state 17
    Return       go to state 18
    If           go to state 19
    Loop         go to state 20


State 16

   46 Statement: Assignment •

    $default  reduce using rule 46 (Statement)


State 17

   47 Statement: Print •

    $default  reduce using rule 47 (Statement)


State 18

   48 Statement: Return •

    $default  reduce using rule 48 (Statement)


State 19

   49 Statement: If •

    $default  reduce using rule 49 (Statement)


State 20

   50 Statement: Loop •

    $default  reduce using rule 50 (Statement)


State 21

   45 Tail: TOKEN_LPAREN • Expressions TOKEN_RPAREN

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 25
    TOKEN_REAL_LITERAL    shift, and go to state 26
    TOKEN_STRING_LITERAL  shift, and go to state 27
    TOKEN_TRUE            shift, and go to state 28
    TOKEN_FALSE           shift, and go to state 29
    TOKEN_FUNC            shift, and go to state 30
    TOKEN_NOT             shift, and go to state 31
    TOKEN_LPAREN          shift, and go to state 32
    TOKEN_LSQUARE         shift, and go to state 33
    TOKEN_LCURLY          shift, and go to state 34
    TOKEN_PLUS            shift, and go to state 35
    TOKEN_MINUS           shift, and go to state 36
    TOKEN_READINT         shift, and go to state 8
    TOKEN_READREAL        shift, and go to state 9
    TOKEN_READSTRING      shift, and go to state 10
